[project]
name = "runeforger"
version = "0.1.0"
description = "Auto-imports builds and runes to client, keeping them up-to-date with the META."
readme = "README.md"
authors = [
  {name = "Amburgao", email = "amburgao@users.noreply.github.com"}
]
maintainers = [
  {name = "Amburgao", email = "amburgao@users.noreply.github.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/amburgao/runeforger/issues"
changelog = "https://github.com/amburgao/runeforger/blob/master/changelog.md"
homepage = "https://github.com/amburgao/runeforger"

[project.scripts]
runeforger = "runeforger.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
